fdo#73869 fix highlight RTL Problem at the StartCenter window.

Change-Id: I744d8f85c6e4c555ef8916281ebdc709fe6ddfa9